--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2 style="text-align: center;">Binary Search Tree</h2>
 
     <h2 style="text-align: center;"><p>[9, 3, 16, 4, 7, 20, 9, 2, 10 ]</p></h2>
-
+<p>Please Check the result in Console</p>
 </body>
  <script  src="main.js"></script>
 </html>
