--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Binary Search Tree</title>
-   
+
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <h2 style="text-align: center;">Binary Search Tree</h2>
 
-    <h2 style="text-align: center;"><p>[9, 3, 16, 4, 7, 20, 9, 2, 10 ]</p></h2>
-<p>Please Check the result in Console</p>
+    <h2 style="text-align: center;">
+        <p>[9, 3, 16, 4, 7, 20, 9, 2, 10 ]</p>
+    </h2>
+    <p>Please Check the result in Console</p>
 </body>
- <script  src="main.js"></script>
+<script src="main.js"></script>
+
 </html>
